src/objdetect/objdetect.h

void     CascadeClassifier_Close(CascadeClassifierPtr self);
CvStatus CascadeClassifier_Load(CascadeClassifier self, const char *name, int *rval);
CvStatus CascadeClassifier_DetectMultiScale(CascadeClassifier self, Mat img, VecRect *rval);
CvStatus CascadeClassifier_DetectMultiScaleWithParams(CascadeClassifier self, Mat img, VecRect *objects,
                                                      double scale, int minNeighbors, int flags, Size minSize,
                                                      Size maxSize);
CvStatus CascadeClassifier_DetectMultiScale2(CascadeClassifier self, Mat img, VecRect *objects,
                                             VecInt *numDetections, double scaleFactor, int minNeighbors,
                                             int flags, Size minSize, Size maxSize);
CvStatus CascadeClassifier_DetectMultiScale3(CascadeClassifier self, Mat img, VecRect *objects,
                                             VecInt *rejectLevels, VecDouble *levelWeights,
                                             double scaleFactor, int minNeighbors, int flags, Size minSize,
                                             Size maxSize, bool outputRejectLevels);
CvStatus CascadeClassifier_Empty(CascadeClassifier self, bool *rval);