packages/dartcv/lib/src/g/objdetect.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - Objdetect
///
class CvNativeObjdetect {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeObjdetect(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeObjdetect.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void CascadeClassifier_Close(
    CascadeClassifierPtr self,
  ) {
    return _CascadeClassifier_Close(
      self,
    );
  }

  late final _CascadeClassifier_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CascadeClassifierPtr)>>(
          'CascadeClassifier_Close');
  late final _CascadeClassifier_Close = _CascadeClassifier_ClosePtr.asFunction<
      void Function(CascadeClassifierPtr)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale(
    CascadeClassifier self,
    Mat img,
    ffi.Pointer<VecRect> rval,
  ) {
    return _CascadeClassifier_DetectMultiScale(
      self,
      img,
      rval,
    );
  }

  late final _CascadeClassifier_DetectMultiScalePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat,
              ffi.Pointer<VecRect>)>>('CascadeClassifier_DetectMultiScale');
  late final _CascadeClassifier_DetectMultiScale =
      _CascadeClassifier_DetectMultiScalePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, Mat, ffi.Pointer<VecRect>)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale2(
    CascadeClassifier self,
    Mat img,
    ffi.Pointer<VecRect> objects,
    ffi.Pointer<VecI32> numDetections,
    double scaleFactor,
    int minNeighbors,
    int flags,
    CvSize minSize,
    CvSize maxSize,
  ) {
    return _CascadeClassifier_DetectMultiScale2(
      self,
      img,
      objects,
      numDetections,
      scaleFactor,
      minNeighbors,
      flags,
      minSize,
      maxSize,
    );
  }

  late final _CascadeClassifier_DetectMultiScale2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              Mat,
              ffi.Pointer<VecRect>,
              ffi.Pointer<VecI32>,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              CvSize,
              CvSize)>>('CascadeClassifier_DetectMultiScale2');
  late final _CascadeClassifier_DetectMultiScale2 =
      _CascadeClassifier_DetectMultiScale2Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              Mat,
              ffi.Pointer<VecRect>,
              ffi.Pointer<VecI32>,
              double,
              int,
              int,
              CvSize,
              CvSize)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale2_Async(
    CascadeClassifier self,
    Mat img,
    double scaleFactor,
    int minNeighbors,
    int flags,
    CvSize minSize,
    CvSize maxSize,
    imp1.CvCallback_2 callback,
  ) {
    return _CascadeClassifier_DetectMultiScale2_Async(
      self,
      img,
      scaleFactor,
      minNeighbors,
      flags,
      minSize,
      maxSize,
      callback,
    );
  }

  late final _CascadeClassifier_DetectMultiScale2_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              Mat,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              CvSize,
              CvSize,
              imp1.CvCallback_2)>>('CascadeClassifier_DetectMultiScale2_Async');
  late final _CascadeClassifier_DetectMultiScale2_Async =
      _CascadeClassifier_DetectMultiScale2_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, double, int,
              int, CvSize, CvSize, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale3(
    CascadeClassifier self,
    Mat img,
    ffi.Pointer<VecRect> objects,
    ffi.Pointer<VecI32> rejectLevels,
    ffi.Pointer<VecF64> levelWeights,
    double scaleFactor,
    int minNeighbors,
    int flags,
    CvSize minSize,
    CvSize maxSize,
    bool outputRejectLevels,
  ) {
    return _CascadeClassifier_DetectMultiScale3(
      self,
      img,
      objects,
      rejectLevels,
      levelWeights,
      scaleFactor,
      minNeighbors,
      flags,
      minSize,
      maxSize,
      outputRejectLevels,
    );
  }

  late final _CascadeClassifier_DetectMultiScale3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              Mat,
              ffi.Pointer<VecRect>,
              ffi.Pointer<VecI32>,
              ffi.Pointer<VecF64>,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              CvSize,
              CvSize,
              ffi.Bool)>>('CascadeClassifier_DetectMultiScale3');
  late final _CascadeClassifier_DetectMultiScale3 =
      _CascadeClassifier_DetectMultiScale3Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              Mat,
              ffi.Pointer<VecRect>,
              ffi.Pointer<VecI32>,
              ffi.Pointer<VecF64>,
              double,
              int,
              int,
              CvSize,
              CvSize,
              bool)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale3_Async(
    CascadeClassifier self,
    Mat img,
    double scaleFactor,
    int minNeighbors,
    int flags,
    CvSize minSize,
    CvSize maxSize,
    bool outputRejectLevels,
    imp1.CvCallback_3 callback,
  ) {
    return _CascadeClassifier_DetectMultiScale3_Async(
      self,
      img,
      scaleFactor,
      minNeighbors,
      flags,
      minSize,
      maxSize,
      outputRejectLevels,
      callback,
    );
  }

  late final _CascadeClassifier_DetectMultiScale3_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              Mat,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              CvSize,
              CvSize,
              ffi.Bool,
              imp1.CvCallback_3)>>('CascadeClassifier_DetectMultiScale3_Async');
  late final _CascadeClassifier_DetectMultiScale3_Async =
      _CascadeClassifier_DetectMultiScale3_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, double, int,
              int, CvSize, CvSize, bool, imp1.CvCallback_3)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScaleWithParams(
    CascadeClassifier self,
    Mat img,
    ffi.Pointer<VecRect> objects,
    double scale,
    int minNeighbors,
    int flags,
    CvSize minSize,
    CvSize maxSize,
  ) {
    return _CascadeClassifier_DetectMultiScaleWithParams(
      self,
      img,
      objects,
      scale,
      minNeighbors,
      flags,
      minSize,
      maxSize,
    );
  }

  late final _CascadeClassifier_DetectMultiScaleWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              Mat,
              ffi.Pointer<VecRect>,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              CvSize,
              CvSize)>>('CascadeClassifier_DetectMultiScaleWithParams');
  late final _CascadeClassifier_DetectMultiScaleWithParams =
      _CascadeClassifier_DetectMultiScaleWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat,
              ffi.Pointer<VecRect>, double, int, int, CvSize, CvSize)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScaleWithParams_Async(
    CascadeClassifier self,
    Mat img,
    double scale,
    int minNeighbors,
    int flags,
    CvSize minSize,
    CvSize maxSize,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_DetectMultiScaleWithParams_Async(
      self,
      img,
      scale,
      minNeighbors,
      flags,
      minSize,
      maxSize,
      callback,
    );
  }

  late final _CascadeClassifier_DetectMultiScaleWithParams_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, ffi.Double,
                  ffi.Int, ffi.Int, CvSize, CvSize, imp1.CvCallback_1)>>(
      'CascadeClassifier_DetectMultiScaleWithParams_Async');
  late final _CascadeClassifier_DetectMultiScaleWithParams_Async =
      _CascadeClassifier_DetectMultiScaleWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat, double, int,
              int, CvSize, CvSize, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_DetectMultiScale_Async(
    CascadeClassifier self,
    Mat img,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_DetectMultiScale_Async(
      self,
      img,
      callback,
    );
  }

  late final _CascadeClassifier_DetectMultiScale_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier, Mat,
              imp1.CvCallback_1)>>('CascadeClassifier_DetectMultiScale_Async');
  late final _CascadeClassifier_DetectMultiScale_Async =
      _CascadeClassifier_DetectMultiScale_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_Empty(
    CascadeClassifier self,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _CascadeClassifier_Empty(
      self,
      rval,
    );
  }

  late final _CascadeClassifier_EmptyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier,
              ffi.Pointer<ffi.Bool>)>>('CascadeClassifier_Empty');
  late final _CascadeClassifier_Empty = _CascadeClassifier_EmptyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          CascadeClassifier, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> CascadeClassifier_Empty_Async(
    CascadeClassifier self,
    imp1.CvCallback_1 callback,
  ) {
    return _CascadeClassifier_Empty_Async(
      self,
      callback,
    );
  }

  late final _CascadeClassifier_Empty_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CascadeClassifier,
              imp1.CvCallback_1)>>('CascadeClassifier_Empty_Async');
  late final _CascadeClassifier_Empty_Async =
      _CascadeClassifier_Empty_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CascadeClassifier_Load(
    CascadeClassifier self,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _CascadeClassifier_Load(
      self,
      name,
      rval,
    );
  }

  late final _CascadeClassifier_LoadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              CascadeClassifier,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>)>>('CascadeClassifier_Load');
  late final _CascadeClassifier_Load = _CascadeClassifier_LoadPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          CascadeClassifier, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)>();
